--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,6 @@
 !!!
 html
   head
-    title= title
+    title Hackathon Guayaquil - HackGye 2012
     link(rel='stylesheet', type="text/css", href='/stylesheets/style.css')
   body!= body
