fix missing colon

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,5 +27,5 @@
 					input(type="submit", value="Enviar")
 				- if ( typeof(msg) != 'undefined' )
 					div
-						p(class="errormsg") Error: #{msg}
+						p(class="notimsg") Error: #{msg}
 		.clearer
